@@ -1,4 +1,5 @@
-@comment $NetBSD: PLIST,v 1.2 2002/04/10 10:19:24 abs Exp $
+@comment $NetBSD: PLIST,v 1.3 2004/07/16 12:51:26 abs Exp $
 libexec/rconfig_probe
+libexec/rconfig_ssh
 sbin/rconfig
 man/man8/rconfig.8
