@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.19 2004/06/22 06:31:46 abs Exp $
+$NetBSD: distinfo,v 1.20 2004/07/16 12:51:26 abs Exp $
 
-SHA1 (rconfig-0.33.tbz) = ed87dd154125553c5ebfd155bd3fa052c4e14e76
-Size (rconfig-0.33.tbz) = 11145 bytes
+SHA1 (rconfig-0.34.tbz) = 1e4214e62d1ac15aae17e2fe3b633d1f509d6804
+Size (rconfig-0.34.tbz) = 11977 bytes
